# ProyectoDI

./: README.md  libros.db  pyproject.toml  requirements.txt
source/: conf.py  funcionamiento_usuario.rst  index.rst
src/: controller.py  formulario_anadir_datos.py  libro.py  main.py  test_controller.py  update_error.py  ventana_principal.py
src/libro_managment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
