[project]
name = "libro-managment"
version = "0.0.1"
authors = [
  {name="Oscar Rodriguez", email="orodriguezcabaleiro@danielcastelao.org" }
]
dependencies = [
  "PyGObject~=3.54.5"
]
description = "Una utilidad para gestionar libros y sus autores de forma "
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python ::3",
  "Operating System :: OS Independent"
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/Mestosc"


[project.scripts]
libro_managment = "main:main"
